<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">CleverDay</string>
	<string name="google_calendar">Google Calendar</string>
	<string name="untitled_block">Untitled time block</string>
	<string name="today">Today</string>
	<string name="appearance">Appearance</string>
	<string name="day_start">Start of day</string>
	<string name="time_line_scroll_start">Time line will be scrolled to 9:00 at start</string>
	<string name="delete">Delete</string>
	<string name="none">None</string>
	<string name="modify_google">Modify Google Calendar</string>
	<string name="modify_google_on_summary">Google Calendar will be synced with CleverDay</string>
	<string name="modify_google_off_summary">Google Calendar won\'t be synced with CleverDay</string>
	<string name="receive_from_google">Receive from Google Calendar</string>
	<string name="receive_from_google_on_summary">CleverDay will be synced with Google Calendar</string>
	<string name="receive_from_google_off_summary">CleverDay won\'t be synced with Google Calendar</string>
	<string name="about">About</string>
	<string name="info">Info</string>
	<string name="add_block">Add block</string>
	<string name="edit_block">Edit block</string>
	<string name="start">Start time</string>
	<string name="end">End time</string>
	<string name="notes">Notes…</string>
	<string name="set_time">Set time</string>
	<string name="set_date">Set date</string>
	<string name="reminder_set">Reminder is set</string>
	<string name="reminder_unset">Reminder is unset</string>
	<string name="change_color">Change color</string>
	<string name="reminder">Reminder</string>
	<string name="add">Add</string>
	<string name="settings">Settings</string>
	<string name="edit">Edit</string>
	<string name="deleted">Deleted</string>
	<string name="title">Title</string>
	<string name="sync_priority">Sync priority</string>
	<string name="set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="select_color">Select color</string>
	<string name="undo">Undo</string>
	<string name="now">Now</string>
	<string name="next">Next</string>
	<string name="no_plan">No upcoming events</string>
	<string name="yesterday">Yesterday</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="dark_theme">Dark theme</string>
	<string name="ui_is_light">CleverDay is in light theme now</string>
	<string name="ui_is_dark">CleverDay is in dark theme now</string>
	<string name="save">Save</string>
	<string name="edit_notes">Edit notes</string>
	<string name="show_notification">Show notification</string>
	<string name="show_notification_on_summary">Notification is shown</string>
	<string name="show_notification_off_summary">Notification isn\'t shown</string>
	<string name="later">Later</string>
	<string name="postpone">Postpone</string>
	<string name="minutes15">15 minutes</string>
	<string name="minutes30">Half hour</string>
	<string name="hour">Hour</string>
	<string name="hours2">2 hours</string>
	<string name="hours4">4 hours</string>
	<string name="hour1minutes30">Hour and a half</string>
	<string name="event_color">Event color in Google Calendar</string>
	<string name="calendar_event_color_on_summary">Color of calendar in Google Calendar</string>
	<string name="calendar_event_color_off_summary">Color of block in CleverDay</string>
	<string name="use_mobile_network">Use mobile network</string>
	<string name="use_only_wifi">Only Wi-Fi</string>
	<string name="use_mobile_network_and_wifi">Mobile network and Wi-Fi</string>
	<string name="sync">Sync</string>
	<string name="licenses">Licenses</string>
	<string name="translators">Translators</string>
	<string name="contacts">Contacts</string>
	<string name="app_description">Your true time organiser</string>
	<string name="created_by">Created by</string>
	<string name="idea_by">Idea by</string>
	<string name="site">Site</string>
	<string name="rate_app">Rate app</string>
	<string name="submit_help">Submit bug/feature/translation</string>
	<string name="on_google_play">On Google Play</string>
	<string name="welcome">Welcome</string>
	<string name="hello">Hello!</string>
	<string name="hello_text">Hi! This is CleverDay, time organizer in which you can plan your day fast and comfortably</string>
	<string name="ok">OK</string>
	<string name="plan_fast">Plan fast</string>
	<string name="plan_fast_text">Do you have some repeating tasks? You can add them to next days just in two clicks</string>
	<string name="edit_fast">Edit fast</string>
	<string name="edit_fast_text">Have plans suddenly been changed? Just move remaining</string>
	<string name="history">History</string>
	<string name="no_history">You haven\'t created any task yet</string>
</resources>
